apps/webapp/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"webapp","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"nginx"}}}
  creationTimestamp: "2026-01-24T07:45:22Z"
  labels:
    app: webapp
  name: webapp
  namespace: default
  resourceVersion: "177208"
  uid: 67fcc7c3-1c63-44d7-bdb0-bc6d0b65bcbf
spec:
  clusterIP: 10.106.120.142
  clusterIPs:
  - 10.106.120.142
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
